@@ -51,6 +51,7 @@ extern af_info_t af_info_center;
 extern af_info_t af_info_sinesuppress;
 extern af_info_t af_info_karaoke;
 extern af_info_t af_info_scaletempo;
+extern af_info_t af_info_stats;
 
 static af_info_t* filter_list[]={ 
    &af_info_dummy,
@@ -85,6 +86,7 @@ static af_info_t* filter_list[]={
    &af_info_sinesuppress,
    &af_info_karaoke,
    &af_info_scaletempo,
+   &af_info_stats,
    NULL 
 };
 
